hphp/test/slow/parser/empty-files/empty-invalid.php.expectf

Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/slow/parser/empty-files/empty-invalid.php on line 1